--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="todo-input-grid">
             <input placeholder="Todo name" class="Todo-Input name-input">
             <input type="date" class="input-date due-date">
-            <button onclick="AddTodo()" class="add-button">Add</button>
+            <button class="add-button js-addTodo-button">Add</button>
         </div>
         <div class="display-value todo-grid"></div>
     </div>
